added leave/join handling